agregando mongo atlas

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT: 3000
-MONGO_URL: mongodb://127.0.0.1:27017/api-ecommerce
+MONGO_URL: mongodb+srv://willCh:69349293will@cluster0.9hodb69.mongodb.net/apiEcommerce?retryWrites=true&w=majority
