--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/willChCode/api_ecommerce#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0"
   },
