solucion de problema POST con cookie, limpiando archivos basura

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT: 3000
 MONGO_URL: mongodb+srv://willCh:69349293will@cluster0.9hodb69.mongodb.net/apiEcommerce?retryWrites=true&w=majority
 
-SECRET=secret123
+SECRET: secret123
