--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.12.0",
     "mongoose": "^6.7.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
